{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 187,
  "lineage": "5e44309b-7ee7-6a9b-61ee-629a44e34646",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:security-group/sg-030e8569f03e15bc5",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-030e8569f03e15bc5",
            "name": "default",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.runner",
      "mode": "data",
      "type": "aws_subnet",
      "name": "runners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:subnet/subnet-0c333026ec94846ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 248,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c333026ec94846ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977310042706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-0f07ef622557ef666"
          }
        }
      ]
    },
    {
      "module": "module.runner",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:security-group/sg-050975da11d1e8d63",
            "description": "A security group containing Runner Worker instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic for Runner Workers.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050975da11d1e8d63",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic from sg-0d001dc4a765c665a to docker-machine instances in group gitlab-runner-docker-machine20240421000245101800000009 on port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d001dc4a765c665a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic within group gitlab-runner-docker-machine20240421000245101800000009 on port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow docker-machine traffic from group gitlab-runner2024042100024566950000000c to docker-machine instances in group gitlab-runner-docker-machine20240421000245101800000009",
                "from_port": 2376,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d001dc4a765c665a"
                ],
                "self": false,
                "to_port": 2376
              },
              {
                "cidr_blocks": [],
                "description": "Allow docker-machine traffic within group gitlab-runner-docker-machine20240421000245101800000009 on port 2376",
                "from_port": 2376,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2376
              }
            ],
            "name": "gitlab-runner-docker-machine20240421000245101800000009",
            "name_prefix": "gitlab-runner-docker-machine",
            "owner_id": "977310042706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "gitlab-runner",
              "tf-aws-gitlab-runner:example": "runner-default",
              "tf-aws-gitlab-runner:instancelifecycle": "spot:yes"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "gitlab-runner",
              "tf-aws-gitlab-runner:example": "runner-default",
              "tf-aws-gitlab-runner:instancelifecycle": "spot:yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.runner",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:security-group/sg-0d001dc4a765c665a",
            "description": "A security group containing gitlab-runner agent instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d001dc4a765c665a",
            "ingress": [],
            "name": "gitlab-runner2024042100024566950000000c",
            "name_prefix": "gitlab-runner",
            "owner_id": "977310042706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "gitlab-runner",
              "tf-aws-gitlab-runner:example": "runner-default",
              "tf-aws-gitlab-runner:instancelifecycle": "spot:yes"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "gitlab-runner",
              "tf-aws-gitlab-runner:example": "runner-default",
              "tf-aws-gitlab-runner:instancelifecycle": "spot:yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.runner",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_machine_docker_runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow docker-machine traffic from group gitlab-runner2024042100024566950000000c to docker-machine instances in group gitlab-runner-docker-machine20240421000245101800000009",
            "from_port": 2376,
            "id": "sgrule-2395144827",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050975da11d1e8d63",
            "security_group_rule_id": "sgr-08fe245267b466cf2",
            "self": false,
            "source_security_group_id": "sg-0d001dc4a765c665a",
            "timeouts": null,
            "to_port": 2376,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "module.runner.aws_security_group.docker_machine",
            "module.runner.aws_security_group.runner",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.runner",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_machine_docker_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow docker-machine traffic within group gitlab-runner-docker-machine20240421000245101800000009 on port 2376",
            "from_port": 2376,
            "id": "sgrule-2723878105",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050975da11d1e8d63",
            "security_group_rule_id": "sgr-0a817e28d19f92339",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2376,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.runner.aws_security_group.docker_machine",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.runner",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_machine_ssh_runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH traffic from sg-0d001dc4a765c665a to docker-machine instances in group gitlab-runner-docker-machine20240421000245101800000009 on port 22",
            "from_port": 22,
            "id": "sgrule-1506572909",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050975da11d1e8d63",
            "security_group_rule_id": "sgr-00ed976cf68e8cb56",
            "self": false,
            "source_security_group_id": "sg-0d001dc4a765c665a",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "module.runner.aws_security_group.docker_machine",
            "module.runner.aws_security_group.runner",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.runner",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_machine_ssh_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH traffic within group gitlab-runner-docker-machine20240421000245101800000009 on port 22",
            "from_port": 22,
            "id": "sgrule-1968467151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050975da11d1e8d63",
            "security_group_rule_id": "sgr-0bf37c1c6f667e36b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.runner.aws_security_group.docker_machine",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:network-acl/acl-0749fe1f20765b5b7",
            "default_network_acl_id": "acl-0749fe1f20765b5b7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0749fe1f20765b5b7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "977310042706",
            "subnet_ids": [
              "subnet-0c333026ec94846ee",
              "subnet-0fad6379d55f9ed77"
            ],
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-default"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-default"
            },
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:route-table/rtb-04a81f6be39ba0107",
            "default_route_table_id": "rtb-04a81f6be39ba0107",
            "id": "rtb-04a81f6be39ba0107",
            "owner_id": "977310042706",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-default"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:security-group/sg-030e8569f03e15bc5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-030e8569f03e15bc5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "977310042706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-default"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-default"
            },
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5b1ad9d0ae25fdc",
            "association_id": "eipassoc-0b9eba0746751a34d",
            "domain": "vpc",
            "id": "eipalloc-0d5b1ad9d0ae25fdc",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0441cf026d633cd46",
            "private_dns": "ip-10-0-101-91.ap-northeast-1.compute.internal",
            "private_ip": "10.0.101.91",
            "public_dns": "ec2-52-198-246-185.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.198.246.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-ap-northeast-1a"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-ap-northeast-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:internet-gateway/igw-0880a78fddb00fff0",
            "id": "igw-0880a78fddb00fff0",
            "owner_id": "977310042706",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner"
            },
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5b1ad9d0ae25fdc",
            "association_id": "eipassoc-0b9eba0746751a34d",
            "connectivity_type": "public",
            "id": "nat-023f3902726434466",
            "network_interface_id": "eni-0441cf026d633cd46",
            "private_ip": "10.0.101.91",
            "public_ip": "52.198.246.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fad6379d55f9ed77",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-ap-northeast-1a"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-ap-northeast-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0bd692aef6387b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-023f3902726434466",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0bd692aef6387b5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0880a78fddb00fff0",
            "id": "r-rtb-0ada75bd40e5f06371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ada75bd40e5f0637",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:route-table/rtb-0c0bd692aef6387b5",
            "id": "rtb-0c0bd692aef6387b5",
            "owner_id": "977310042706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-023f3902726434466",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-private"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:route-table/rtb-0ada75bd40e5f0637",
            "id": "rtb-0ada75bd40e5f0637",
            "owner_id": "977310042706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0880a78fddb00fff0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-public"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444fb1b022904d08",
            "route_table_id": "rtb-0c0bd692aef6387b5",
            "subnet_id": "subnet-0c333026ec94846ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aef5c6642fed362",
            "route_table_id": "rtb-0ada75bd40e5f0637",
            "subnet_id": "subnet-0fad6379d55f9ed77"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:subnet/subnet-0c333026ec94846ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c333026ec94846ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977310042706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-private-ap-northeast-1a"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:subnet/subnet-0fad6379d55f9ed77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fad6379d55f9ed77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977310042706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-public-ap-northeast-1a"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner-public-ap-northeast-1a"
            },
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:vpc/vpc-0f07ef622557ef666",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0749fe1f20765b5b7",
            "default_route_table_id": "rtb-04a81f6be39ba0107",
            "default_security_group_id": "sg-030e8569f03e15bc5",
            "dhcp_options_id": "dopt-d2502bb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f07ef622557ef666",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a81f6be39ba0107",
            "owner_id": "977310042706",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "vpc-gitlab-runner"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:977310042706:vpc-endpoint/vpce-095b9320e2c15644a",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-095b9320e2c15644a",
            "ip_address_type": "ipv4",
            "owner_id": "977310042706",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-030e8569f03e15bc5"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Environment": "gitlab-runner",
              "Name": "s3-vpc-endpoint"
            },
            "tags_all": {
              "Environment": "gitlab-runner",
              "Name": "s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f07ef622557ef666"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc_endpoints.aws_security_group.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}